# Evensong-Conductor

./: .gitignore  Cargo.toml  Makefile  README.md
crates/conductor-core/: Cargo.toml
crates/conductor-core/src/: config.rs  console.rs  hermes.rs  ledger.rs  lib.rs  main.rs
crates/conductor-core/tests/: hermes_adapter.rs
docs/: EVENSONG-CONDUCTOR.md
docs/superpowers/plans/: 2026-04-28-conductor-room-gui.md  2026-04-28-evensong-conductor-foundation.md  2026-04-28-operator-console-v0.md
docs/superpowers/specs/: 2026-04-28-conductor-room-gui-design.md  2026-04-28-evensong-conductor-design.md  2026-04-28-operator-console-v0.md
scripts/: first-launch.sh
supabase/: config.toml
supabase/migrations/: 20260428180000_conductor_core.sql
